# paper-aspect-methods-2-data

./: .gitmodules  README.md  configure.sh
application/: CMakeLists.txt  boundary_layers.cc  boundary_layers.h  citcom_reference_comparison.cc  citcom_reference_comparison.h  global_convection_3d.prm
application/data/material/: radial-visc-simple-2.txt
global-adaptive-refinement/: global_model.prm  refinement_energy_density.prm  refinement_temperature.prm  refinement_viscosity.prm  run.sh
inclusion/: CMakeLists.txt  global.prm.base  run_averaging.sh  run_averaging_Q2DGQ1.sh
king/: ala.prm  run_all_models
latent-heat/: global.prm.base  plot_convergence.py  run_latent_heat.sh
sinker/: iter_dgp1.prm  iters.prm  run.sh
solver_ala_im_vs_expl/: explicit.prm  implicit.prm  run.sh
tangurnis/: README.md
